--- a/intro/index.html
+++ b/intro/index.html
@@ -49,12 +49,16 @@
       transform: scale(1.05);
     }
   </style>
+  <link rel="stylesheet" href="style.css">
+<script src="script.js" defer></script>
+
 </head>
 <body>
-  <div class="container">
-    <h1>Hey You 💕</h1>
-    <p>I made something special for you.<br>Click when you’re ready.</p>
-    <a href="valentine.html">Open 💌</a>
-  </div>
+ <div class="container">
+  <h1 id="title"></h1>
+  <p id="message"></p>
+  <button id="openBtn">Open 💌</button>
+</div>
+
 </body>
 </html>
