--- a/valentine.html
+++ b/valentine.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <audio controls autoplay>
+  <source src="https://res.cloudinary.com/docdtiwjg/video/upload/v1770304400/Slip_Away_xbowr9.mp3" type="audio/mpeg">
+</audio>
+
     <!-- Floating Background Elements -->
     <div class="floating-elements">
         <!-- Hearts and bears will be added here by JavaScript -->
